--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -1,6 +1,42 @@
 workflows:
+  windows-publishing-yaml:
+    name: Windows Release build
+    instance_type: windows
+    max_build_duration: 60
+    environment:
+      flutter: 3.7.6
+    scripts:
+      - name: Get Flutter packages
+        script: |
+          flutter packages pub get
+      - name: Flutter analyze
+        script: |
+          flutter analyze
+      - name: Build Flutter macOS
+        script: |
+          flutter build windows --release
+    artifacts:
+      - build/windows/**/kemi_installer.*
+  linux-publishing-yaml:
+    name: Linux Release build
+    instance_type: linux
+    max_build_duration: 60
+    environment:
+      flutter: 3.7.6
+    scripts:
+      - name: Get Flutter packages
+        script: |
+          flutter packages pub get
+      - name: Flutter analyze
+        script: |
+          flutter analyze
+      - name: Build Flutter macOS
+        script: |
+          flutter build linux --release
+    artifacts:
+      - build/linux/**/kemi_installer.*
   macOS-publishing-yaml:
-    name: macOS dev build
+    name: macOS Release build
     max_build_duration: 60
     environment:
       flutter: 3.7.6
@@ -19,7 +55,7 @@ workflows:
       - name: Build Flutter macOS
         script: |
           flutter config --enable-macos-desktop && \
-          flutter build macos --release --build-name=1.0.0 --build-number=1        
+          flutter build macos --release      
       - name: Package macOS application
         script: |
           set -x
