--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -1,7 +1,7 @@
 workflows:
   windows-publishing-yaml:
     name: Windows Release build
-    instance_type: windows
+    instance_type: linux
     max_build_duration: 60
     environment:
       flutter: 3.7.6
